syntax = "proto3";

package abi;

// Data send to server for login
message LoginRequest {
  // user's unique name
  string username = 1;
  // user's password
  string password = 2;
}

// Token generated by server
message Token {
  // token data
  string data = 1;
}

// Data structure for sending a new chat message
message NewChatMessage {
  // unique room name
  // - username like "john"
  // - group name like "engineering"
  // - a comma seperated list of usernames "tyr, joe"
  string room = 1;
  // chat content
  string content = 2;
}

// empty send message response
message SendMessageResponse {}

// empty get message request
message GetMessageRequest {}

// chat message
message ChatMessage {
  // who sent this message
  string sender = 1;
  // room this message was sent to
  string room = 2;
  // content of the message
  string content = 3;
  // timestamp
  int64 timestamp = 4;
}

service Chat {
  // login user and get token
  rpc Login(LoginRequest) returns (Token);
  // send message to a room
  rpc SendMessage(NewChatMessage) returns (SendMessageResponse);
  // subscribe and get all message
  rpc GetMessages(GetMessageRequest) returns (stream ChatMessage);
}